changed style and stopped slideshow from jumping to the start

--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,700;1,400&family=Lora:ital,wght@0,400;0,700;1,400&display=swap');;
+
 * {
     padding: 0px;
     margin: 0px;
@@ -6,6 +8,7 @@
     body {
         width: 100vw;
         height: 100vh;
+        font-size: 10px;
 
         main {
             width: 100%;
@@ -13,13 +16,17 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            background-color: #F8F6F9;
 
             .carousel-container {
-                width: 900px;
-                height: 520px;
+                width: 100%;
+                height: 100%;
                 margin: auto;
                 overflow: hidden;
                 position: relative;
+                display: flex;
+                flex-flow: column nowrap;
+                justify-content: center;
 
 
                 .carousel-slide {
@@ -44,7 +51,6 @@
                             text-align: center;
                             transition: transform 0.8s;
                             transform-style: preserve-3d;
-
                             &:hover {
                                 transform: rotateY(180deg);
                             }
@@ -65,35 +71,33 @@
                             }
 
                             .card-front {
-                                background-color: orchid;
+                                background-image: linear-gradient(150deg, #80A1D4, #C0B9DD);  
                                 color: white;
-                                overflow: hidden;
-
-                                .card-overlay {
-                                    width: 100%;
-                                    height: 100%;
-                                    background-color: rgba(0, 0, 0, 0.2);
-                                    position: absolute;
-
-                                    h1 {
-                                        position: absolute;
-                                        width: 100%;
-                                        top: 20%;
-                                        text-align: center;
-                                        font-family: Arial, Helvetica, sans-serif;
-                                    }
+                                display: flex;
+                                flex-flow: column nowrap;
+                                justify-content: center;
+                                align-items: center;
+                            
+                                h1 {
+                                    font-family: 'Jost', sans-serif;
+                                    font-weight: 400;
+                                    font-size: 2rem;
+                                 
+                                }
+                                h2 {
+                                    font-family: 'Lora', serif;
+                                    font-weight: 400;
+                                    font-style: italic;
                                 }
 
-                                img {
-                                    height: 120%;
-                                }
                             }
 
                             .card-back {
-                                background-color: dodgerblue;
-                                color: white;
                                 transform: rotateY(180deg);
-
+                                overflow: hidden;
+                                img {
+                                    height: 120%;
+                                }
                             }
                         }
                     }
@@ -104,20 +108,28 @@
                     position: absolute;
                     top: 50%;
                     z-index: 10;
-                    left: 5%;
-                    font-size: 30px;
+                    left: 3%;
+                    font-size: 2rem;
                     opacity: 0.5;
                     cursor: pointer;
+                    transition: transform 0.3s ease-in-out;
+                    &:hover {
+                        transform: scale(1.5);
+                    }
                 }
 
                 #nextBtn {
                     position: absolute;
                     top: 50%;
                     z-index: 10;
-                    right: 5%;
-                    font-size: 30px;
+                    right: 3%;
+                    font-size: 2rem;
                     opacity: 0.5;
                     cursor: pointer;
+                    transition: transform 0.3s ease-in-out;
+                    &:hover {
+                        transform: scale(1.5);
+                    }
                 }
             }
         }
